--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,11 @@
 requests
-beautifulsoup4
+python-dotenv
+numpy
+fastapi
+aiologger[aiofiles]
+pip-chill
+uvicorn
+gunicorn
+natasha==0.10.0
+yargy==0.12.0
+aiohttp
